--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 34
+    compileSdk 30
 
     defaultConfig {
         applicationId "com.coolweather.android"
         minSdk 24
-        targetSdk 34
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -25,10 +25,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures{
+        viewBinding true
+    }
 }
 
 dependencies {
-
+    implementation 'org.litepal.guolindev:core:3.2.3'
+    implementation 'com.google.code.gson:gson:2.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation "com.squareup.okhttp3:okhttp:4.7.2"
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
