--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.coolweather.android">
 
-    <!--     网络访问权限,默认只能访问https协议的请求，http协议的请求实访问不了的-->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -10,9 +9,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.Coolweather">
+        android:supportsRtl="true"
+        android:name="org.litepal.LitePalApplication"
+        android:theme="@style/Theme.CoolWeather">
         <activity
             android:name=".MainActivity"
             android:exported="true">
